--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application android:label="@string/app_name"
                  android:icon="@drawable/scala_android">
         <activity android:name="MainActivity"
-                  android:theme="@style/Theme.AppCompat"
+                  android:theme="@style/AppTheme"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
